# SimpleLink

./: .env.example  .gitignore  .preludeignore  API.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  admin-setup-token.txt  build.sh  docker-compose.yml
.github/workflows/: docker-image.yml
.sqlx/: query-2adc9fa303079a3e9c28bbf0565c1ac60eea3a5c37e34fc6a0cb6e151c325382.json  query-8452fbf45386d160bc99ac6c0917a00bf5dad445ef7d484936ce6e0cbe21c965.json  query-a7e827ab162e612a3ef110b680bfafe623409a8da72626952f173df6b740e33b.json  query-c723ec75f9ca9482e1bc86108c20bf379e5728f378626198a0a9ed024a413273.json  query-eeec02400984de4ad69b0b363ce911e74c5684121d0340a97ca8f1fa726774d5.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
frontend/: .gitignore  .preludeignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AuthForms.tsx  EditModal.tsx  Footer.tsx  LinkForm.tsx  LinkList.tsx  PrivacyModal.tsx  StatisticsModal.tsx
frontend/src/components/ui/: container.tsx  dialog.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/types/: api.ts
migrations/: 20240301000000_initial.sql  20240302000000_auth_and_tracking.sql:  20250125000000_init.sql  20250219000000_extend_short_code.sql
migrations/sqlite/: 20250125000000_init.sql
src/: auth.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs
src/migrations/: 2025125_initial.sql
test/: README.md  mikubeam.js  package.json
