[package]
name = "SimpleLink"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9"
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.7", features = ["v4", "serde"] }
base62 = "2.0"
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.4"
argon2 = "0.5.3"
