[package]
name = "simplelink"
version = "0.1.0"
edition = "2021"

[lib]
name = "simplelink"
path = "src/lib.rs"

[dependencies]
rust-embed = "6.8"
jsonwebtoken = "9"
actix-web = "4.4"
actix-files = "0.6"
actix-cors = "0.6"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.7", features = ["v4"] } # Remove serde if not using UUID serialization
base62 = "2.0"
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.4"
argon2 = "0.5.3"
rand = { version = "0.8", features = ["std"] }
mime_guess = "2.0.5"
futures = "0.3.31"
